Update .gitignore to exclude unnecessary files and directories

--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,39 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+
+node_modules
+*.hintrc
+log/
+deprec/
+dist/
+python/
+recipe.json
+*.vscode/
+.vscode/
+results/
+uploads/
+models/
+tests/
+*.pyc
+/__pycache__/
+*.log
+*.pid
+*.pid.lock
+*.sqlite3
+*.db
+*.db-journal
+*.db-shm
+*.db-wal
+*.pyc
+*.pyo
+*.pyd
+*.pyc
+*.aipomoea
+config.json
+custom_preloading.json
+.github/
+test/
+models.json
+static/views/layout/
